feat: add animation

--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,17 @@ body header {
     animation: p-anim 2s infinite;
 }
 
+@keyframes p-anim {
+    0% {
+        font-size: 20px;
+        color: #fff;
+    }
+    50% {
+        color: #f9f;
+    }
+    100% {
+        font-size: 50px;
+        color: #f0f;
+    }
+}
+
